[FID-7889] add notes for v7.3.0-insiders

--- a/release-notes/release-notes-insiders.json
+++ b/release-notes/release-notes-insiders.json
@@ -1,5 +1,37 @@
 [
     {
+        "version": "7.3.0-insiders",
+        "title": "Fiddler Everywhere v7.3.0",
+        "date": "Sep 4, 2025",
+        "items": [
+            {
+                "type": "New",
+                "entries": [
+                    {
+                        "title": "Add a Save button to the Reverse Proxy and Network Capture dialogs for easier state changes"
+                    }
+                ]
+            },
+            {
+                "type": "Fixed",
+                "entries": [
+                    {
+                        "title": "Compact view improvements in Live Traffic grid"
+                    },
+                    {
+                        "title": "Body inspector scrolled to top while reviewing a streaming session that is still in progress"
+                    },
+                    {
+                        "title": "Best inspector not automatically selected when switching between sessions with different body types"
+                    },
+                    {
+                        "title": "Update third-party dependencies to mitigate potential security vulnerabilities"
+                    }
+                ]
+            }
+        ]
+    },
+    {
         "version": "7.2.0-insiders",
         "title": "Fiddler Everywhere v7.2.0",
         "date": "Aug 14, 2025",
