--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,9 @@ navigation:
     modify-and-filter-traffic:
         title: Modify & Filter Traffic
         position: 50
+    mcp-server:
+        title: MCP Server
+        position: 55 
     compose-api-requests:
         title: Compose API Requests
         position: 60
