[FID-8029] Add release notes for v7.5.0-latest (#635)
* add release notes

* update release date

* Update release-notes.json

--- a/release-notes/release-notes.json
+++ b/release-notes/release-notes.json
@@ -1,4 +1,36 @@
 [
+    {
+    "version": "7.5.0",
+    "title": "Fiddler Everywhere v7.5.0",
+    "date": "Nov 17, 2025",
+    "items": [
+      {
+        "type": "New",
+        "entries": [
+          {
+            "title": "Added Debugging Assistant, enabling users to connect their preferred LLM model and enhance HTTP traffic analysis and debugging workflows."
+          },
+          {
+            "title": "Added managed application configuration allowing administrators to control Debugging Assistant access."
+          }
+        ]
+      },
+      {
+        "type": "Fixed",
+        "entries": [
+          {
+            "title": "It was possible to configure the same reverse proxy port multiple times through MCP."
+          },
+          {
+            "title": "SSE over HTTP/1.1 fails the entire session when unchunking is unsuccessful."
+          },
+          {
+            "title": "Update third-party dependencies to mitigate potential security vulnerabilities."
+          }
+        ]
+      }
+    ]
+  },
   {
     "version": "7.4.0",
     "title": "Fiddler Everywhere v7.4.0",
