--- a/release-notes/release-notes.json
+++ b/release-notes/release-notes.json
@@ -1,6 +1,6 @@
 [
   {
-    "version": "7.6.0-insiders",
+    "version": "7.6.0",
     "title": "Fiddler Everywhere v7.6.0",
     "date": "January 20, 2026",
     "items": [
